<resources>
    <string name="app_name">Safety</string>
    <string name="safety_app">Safety App</string>
    <string name="user_name">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="login_ul"><u>Login</u></string>
    <string name="signup">Signup</string>
    <string name="signup_ul"><u>Signup</u></string>
    <string name="not_signup">Not yet registered?</string>
    <string name="already_signup">Already registered?</string>
    <string name="hint_user_name">Username</string>
    <string name="hint_password">Password</string>
    <string name="hint_conf_password">Confirm Password</string>
    <string name="hint_email">Email</string>
    <string name="please_provide_call_permission">Please allow call permission.</string>
    <string name="plan_a_trip">Plan a Trip</string>
    <string name="virtual_friend_walk">Near by Explorer</string>
    <string name="check_your_route">Check Your Route</string>
    <string name="get_your_contacts">Get the Contacts</string>
    <string name="call_your_friend">Call You Friend</string>
    <string name="share_your_trip">Share You Trip</string>
    <string name="trips_with_friends">Trip with Friends</string>
    <string name="saved_trips">Saved Trips</string>
    <string name="shuttle_schedule">Shuttle Schedule</string>
    <string name="next_shuttle">Next Shuttle</string>
    <string name="presidential_green">Presidential Green</string>
    <string name="bala_shopping">Bala Shopping Center</string>
    <string name="bala_city">Bala and City Ave</string>
    <string name="target">Target</string>
    <string name="fourty7_city">47th and City Ave</string>
    <string name="fifty_city">50th and City Ave</string>
    <string name="mandeville">Mandeville Hall</string>
    <string name="cardinal">Cardinal Ave</string>
    <string name="merion">Merion Gardens</string>
    <string name="overbrook_city">Overbrook and City Ave</string>
    <string name="cardinal_entrance">Cardinal Ave Entrance Gate</string>
    <string name="east_shuttle">East Shuttle</string>
    <string name="west_shuttle">West Shuttle</string>
    <string name="sju_shuttle">SJU Shuttle</string>
    <string name="septa">SEPTA</string>
    <string name="see_routes">See Routes</string>
    <string name="enter_loc">Enter Current Location</string>
    <string name="show_time">Show Times</string>
    <string name="times">""</string>
    <string name="times2">""</string>
    <string name="times3">""</string>
    <string name="times4">""</string>
    <string name="times5">""</string>
    <string name="times6">""</string>
    <string name="times7">""</string>
    <string name="times8">""</string>
    <string name="times9">""</string>
    <string name="times10">""</string>
    <string name="times11">""</string>
    <string name="times12">""</string>
    <string name="septa_routes">SEPTA Routes</string>
    <string name="saved_title1">Title1</string>
    <string name="saved_start1">Start1</string>
    <string name="saved_end1">End1</string>
    <string name="btn_newtrip">New Trip</string>
    <string name="btn_destination">Destination Button</string>
    <string name="remove">Remove</string>
    <string name="saved_title2">Title2</string>
    <string name="saved_start2">Start2</string>
    <string name="saved_end2">End2</string>
    <string name="title_activity_plan_atrip">PlanATripActivity</string>
    <string name="lbl_logout">Logout</string>
    <string name="save_a_trip">Save A Trip</string>
</resources>