<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack3"
        android:layout_width="@dimen/dp_50"
        android:layout_height="@dimen/dp_50"
        android:src="@drawable/ic_back"
        android:onClick="goBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="105dp"
        android:layout_height="48dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="16dp"
        android:text="@string/septa"
        android:textColor="@color/orange"
        android:textSize="34sp"
        app:layout_constraintStart_toEndOf="@+id/ivBack3"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnRoutes"
        android:layout_width="130dp"
        android:layout_height="48dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="80dp"
        android:text="@string/see_routes"
        android:textColor="@color/orange"
        app:backgroundTint="#908CC5E4"
        android:onClick="seeRoutes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/mandTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="516dp"
        android:text="@string/times6"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/merionTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="408dp"
        android:text="@string/times3"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="121dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="564dp"
        android:text="@string/fourty7_city"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="141dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="636dp"
        android:text="@string/bala_shopping"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardAveTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="456dp"
        android:text="@string/times5"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="123dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="612dp"
        android:text="@string/presidential_green"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fourtyCityTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="564dp"
        android:text="@string/times8"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/overbrookCityTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="432dp"
        android:text="@string/times4"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="128dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="540dp"
        android:text="@string/fifty_city"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="178dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="384dp"
        android:text="@string/cardinal_entrance"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="516dp"
        android:text="@string/mandeville"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/balaCityTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="660dp"
        android:text="@string/times12"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="139dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="320dp"
        android:text="@string/west_shuttle"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nextShuttle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="256dp"
        android:layout_marginTop="316dp"
        android:text="@string/next_shuttle"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/westMand"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="360dp"
        android:text="@string/times"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="408dp"
        android:text="@string/merion"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="136dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="480dp"
        android:text="@string/east_shuttle"
        android:textColor="@color/orange"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/targetTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="588dp"
        android:text="@string/times9"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="360dp"
        android:text="@string/mandeville"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="119dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="660dp"
        android:text="@string/bala_city"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/presTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="612dp"
        android:text="@string/times10"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="179dp"
        android:layout_height="50dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="220dp"
        android:text="@string/sju_shuttle"
        android:textColor="@color/orange"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <DigitalClock
        android:id="@+id/Clock"
        android:layout_width="69dp"
        android:layout_height="18dp"
        android:layout_marginStart="172dp"
        android:layout_marginTop="200dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/balaShopTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="636dp"
        android:text="@string/times11"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="588dp"
        android:text="@string/target"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/cardGateTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="384dp"
        android:text="@string/times2"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="156dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="432dp"
        android:text="@string/overbrook_city"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="105dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="456dp"
        android:text="@string/cardinal"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/fiftyCityTime"
        android:layout_width="104dp"
        android:layout_height="24dp"
        android:layout_marginStart="288dp"
        android:layout_marginTop="540dp"
        android:text="@string/times7"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="253dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/btnRoutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.142">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/locationInput"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/enter_loc" />
    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>