<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="@dimen/dp_16">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnStop"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/stop"
        android:scaleType="fitXY"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/safety_app"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_32"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnStop"
        android:layout_marginTop="@dimen/dp_16"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/evUserName"
        app:layout_constraintBottom_toBottomOf="@id/evUserName"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/evUserName"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvTitle"
        android:layout_marginTop="@dimen/dp_25"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/hint_user_name"
        android:paddingHorizontal="@dimen/dp_16"
        android:inputType="text"
        android:background="@drawable/shape_edittext"
        android:paddingVertical="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        app:layout_constraintStart_toEndOf="@id/tvUserName"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/evUserName"
        app:layout_constraintStart_toStartOf="@id/tvUserName"
        app:layout_constraintBottom_toBottomOf="@id/evPassword"
        />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/evPassword"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/evUserName"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintEnd_toEndOf="@id/evUserName"
        android:background="@drawable/shape_edittext"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_8"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:layout_marginStart="@dimen/dp_8"
        app:layout_constraintStart_toEndOf="@id/tvPassword"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/evPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_32"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="@dimen/dp_200"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/signup"
        android:textColor="@color/black"
        android:textAllCaps="false"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        app:layout_constraintTop_toBottomOf="@id/btnSignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:src="@drawable/logo"
        android:scaleType="fitXY"/>

</androidx.constraintlayout.widget.ConstraintLayout>