<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:padding="@dimen/dp_16">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/tvTitle"
        android:layout_width="@dimen/dp_200"
        android:layout_height="@dimen/dp_150"
        android:layout_marginTop="32dp"
        android:scaleType="centerInside"
        android:src="@drawable/sju"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/evUserName"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/shape_edittext"
        android:hint="@string/hint_user_name"
        android:inputType="text"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_8"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/evEmail"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edittext"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_8"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange_200"
        app:layout_constraintEnd_toEndOf="@id/evUserName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/evUserName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/evPassword"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edittext"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_8"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange_200"
        app:layout_constraintEnd_toEndOf="@id/evEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/evEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/evConfPassword"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_edittext"
        android:hint="@string/hint_conf_password"
        android:inputType="textPassword"
        android:paddingHorizontal="@dimen/dp_16"
        android:paddingVertical="@dimen/dp_8"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange_200"
        app:layout_constraintEnd_toEndOf="@id/evPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/evPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="@dimen/dp_50"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_selector"
        android:text="@string/signup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/evConfPassword" />


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSignup"
        tools:layout_editor_absoluteX="106dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLabelLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_signup"
            android:textAllCaps="false"
            android:textColor="@color/cyan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/login_ul"
            android:textAllCaps="false"
            android:textColor="@color/orange"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnLabelLogin" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>